# ai-engineering-team

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  logging_config.py  main.py
backend/app/agents/: __init__.py  architect.py  backend_engineer.py  base.py  code_reviewer.py  frontend_engineer.py  product_manager.py  qa_engineer.py  registry.py  security_reviewer.py
backend/app/api/: deps.py
backend/app/api/routes/: artifacts.py  chat.py  health.py  projects.py  runs.py
backend/app/core/: __init__.py  events.py
backend/app/db/: __init__.py  session.py
backend/app/graph/: __init__.py  builder.py  nodes.py  routing.py  state.py
backend/app/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  mock_data.py  mock_provider.py  openai_provider.py
backend/app/models/: __init__.py  db.py
backend/app/repositories/: __init__.py  artifact_repo.py  chat_repo.py  project_repo.py  run_repo.py
backend/app/schemas/: __init__.py  agent_io.py  artifact.py  chat.py  enums.py  events.py  run.py
backend/app/services/: __init__.py  artifact_service.py  brief_service.py  chat_service.py  orchestration_service.py  project_service.py  serializers.py
backend/scripts/: run_workflow.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_graph.py  test_providers.py  test_routing.py
docs/: ARCHITECTURE.md  WORKFLOW.md
frontend/: .env.example  Dockerfile  next.config.mjs  (+3 more)
(+36 files in other folders)
