[project]
name = "ai-engineering-team-backend"
version = "0.1.0"
description = "Backend for AI Engineering Team — an autonomous multi-agent software engineering platform built on LangGraph."
requires-python = ">=3.11"
readme = "../README.md"
license = { text = "MIT" }

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM"]
ignore = [
    "B008",      # FastAPI dependency-injection pattern uses calls in defaults
    "ASYNC109",  # explicit timeout params are fine in our test helpers
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
